--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -10,16 +10,28 @@ dnspython==2.0.0
 fastapi==0.61.1
 gunicorn==20.0.4
 h11==0.9.0
+httpcore==0.12.0
 httptools==0.1.1
+httpx==0.16.1
 idna==2.10
+iniconfig==1.1.1
 motor==2.2.0
 multidict==4.7.6
+packaging==20.4
+pluggy==0.13.1
+py==1.9.0
 pydantic==1.6.1
 pymongo==3.11.0
+pyparsing==2.4.7
+pytest==6.1.2
 pytz==2020.1
 PyYAML==5.3.1
 requests==2.24.0
+rfc3986==1.4.0
+six==1.15.0
+sniffio==1.2.0
 starlette==0.13.6
+toml==0.10.2
 urllib3==1.25.10
 uvicorn==0.11.8
 uvloop==0.14.0
