--- a/app/core/logging.yaml
+++ b/app/core/logging.yaml
@@ -47,7 +47,7 @@ handlers:
 
 loggers:
   my_module:
-    level: ERROR
+    level: DEBUG
     handlers: [console]
     propagate: no
   uvicorn.access:
@@ -62,5 +62,5 @@ loggers:
     propagate: no
 
 root:
-  level: INFO
+  level: DEBUG
   handlers: [console, info_file_handler, error_file_handler]
