--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,6 @@
 aiogram==2.9.2
-aiohttp==3.6.2
+aiohttp==3.7.3
+APScheduler==3.6.3
 async-timeout==3.0.1
 attrs==20.2.0
 Babel==2.8.0
@@ -10,11 +11,11 @@ dnspython==2.0.0
 fastapi==0.61.1
 gunicorn==20.0.4
 h11==0.9.0
-httpcore==0.12.0
+httpcore==0.11.1
 httptools==0.1.1
-httpx==0.16.1
+httpx==0.15.5
 idna==2.10
-iniconfig==1.1.1
+iniconfig==1.0.1
 motor==2.2.0
 multidict==4.7.6
 packaging==20.4
@@ -23,15 +24,19 @@ py==1.9.0
 pydantic==1.6.1
 pymongo==3.11.0
 pyparsing==2.4.7
-pytest==6.1.2
+pytest==6.1.1
+pytest-asyncio==0.14.0
 pytz==2020.1
 PyYAML==5.3.1
 requests==2.24.0
 rfc3986==1.4.0
 six==1.15.0
-sniffio==1.2.0
+sniffio==1.1.0
 starlette==0.13.6
-toml==0.10.2
+toml==0.10.1
+transitions==0.8.6
+typing-extensions==3.7.4.3
+tzlocal==2.1
 urllib3==1.25.10
 uvicorn==0.11.8
 uvloop==0.14.0
