--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,3 +3,5 @@ RUN pip install --upgrade pip
 COPY . /app/app
 WORKDIR /app/app
 RUN pip install -r requirements.txt
+# RUN chmod +x ./tests/startTests.sh
+# RUN ./tests/startTests.sh
