--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "8000:80"
     environment:
       - TZ=Europe/Moscow
-      - BOT_TOKEN=1482285686:AAELI4Uhzf_ql49fgohczkTGbyZailNJHtg
+      - BOT_TOKEN=
       - BOT_ENV=PROD
       - MONGO_NAME=invest
       - MONGO_COLLECTION=notifications
