--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,6 @@
 aiogram==2.9.2
 aiohttp==3.7.3
+aioredis==1.3.1
 APScheduler==3.6.3
 async-timeout==3.0.1
 attrs==20.2.0
@@ -11,6 +12,7 @@ dnspython==2.0.0
 fastapi==0.61.1
 gunicorn==20.0.4
 h11==0.9.0
+hiredis==1.1.0
 httpcore==0.11.1
 httptools==0.1.1
 httpx==0.15.5
