--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,5 +1,7 @@
 aiogram==2.9.2
 aiohttp==3.7.3
+aioredis==1.3.1
+APScheduler==3.6.3
 async-timeout==3.0.1
 attrs==20.2.0
 Babel==2.8.0
@@ -7,16 +9,22 @@ certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 dnspython==2.0.0
+fastapi==0.61.1
+gunicorn==20.0.4
 h11==0.9.0
+hiredis==1.1.0
 httpcore==0.11.1
 httptools==0.1.1
 httpx==0.15.5
 idna==2.10
 iniconfig==1.0.1
+motor==2.2.0
 multidict==4.7.6
 packaging==20.4
 pluggy==0.13.1
 py==1.9.0
+pydantic==1.6.1
+pymongo==3.11.0
 pyparsing==2.4.7
 pytest==6.1.1
 pytest-asyncio==0.14.0
@@ -28,6 +36,7 @@ six==1.15.0
 sniffio==1.1.0
 starlette==0.13.6
 toml==0.10.1
+transitions==0.8.6
 typing-extensions==3.7.4.3
 tzlocal==2.1
 urllib3==1.25.10
