--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,7 @@
 aiogram==2.9.2
 aiohttp==3.7.3
 aioredis==1.3.1
+apimoex==1.2.0
 APScheduler==3.6.3
 async-timeout==3.0.1
 attrs==20.2.0
@@ -20,7 +21,9 @@ idna==2.10
 iniconfig==1.0.1
 motor==2.2.0
 multidict==4.7.6
+numpy==1.20.1
 packaging==20.4
+pandas==1.2.3
 pluggy==0.13.1
 py==1.9.0
 pydantic==1.6.1
@@ -28,6 +31,7 @@ pymongo==3.11.0
 pyparsing==2.4.7
 pytest==6.1.1
 pytest-asyncio==0.14.0
+python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
 requests==2.24.0
