--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - TIME_OUT=3
     depends_on:
       - mongodb
+      - redis
 
   bot:
     build: ./bot
@@ -49,11 +50,11 @@ services:
   mongodb:
     image: mongo:latest
     volumes:
-     - mongodb_volume:/data/db
+     - mongodb_volume:/data.csv/db
     restart: always
 
   redis:
     image: "redis:alpine"
     volumes:
-      - redis_volume:/data
+      - redis_volume:/data.csv
     restart: always
