--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,11 +50,11 @@ services:
   mongodb:
     image: mongo:latest
     volumes:
-     - mongodb_volume:/data.csv/db
+     - mongodb_volume:/data/db
     restart: always
 
   redis:
     image: "redis:alpine"
     volumes:
-      - redis_volume:/data.csv
+      - redis_volume:/data
     restart: always
