--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -32,6 +32,7 @@ pyparsing==2.4.7
 pytest==6.1.1
 pytest-asyncio==0.14.0
 python-dateutil==2.8.1
+python-dotenv==0.16.0
 pytz==2020.1
 PyYAML==5.3.1
 requests==2.24.0
