try fix: notification is expired before ttl ends 1. add logs 2. use get_cached_notification() in is_expired()

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - MONGO_PORT=27017
       - REDIS_PORT=6379
       - REDIS_HOST=redis
-      - REDIS_BONDS_LIST_CACHE_KEY=notification:bonds:default6:received
+      - REDIS_BONDS_LIST_CACHE_KEY=notification:bonds:default:received
       - REDIS_BONDS_LIST_CACHE_TTL=86400
       - REDIS_NOTIFICATION_QUEUE=notification:stock:price:received
       - TIME_OUT=4
